Make the navigation title align with the spec by giving it padding and a left margin along with providing the correct font

--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,10 @@ red - #ee5253
 }
 nav {
     background-color: #0fb9b1;
+    font-family: 'Roboto', sans-serif;
+}
+
+.navigation-title {
+    padding: 13px 10px 10px 10px;
+    margin-left: 10px;
 }
